--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AgusWeather",
+  "name": "AgusWeather - Arenas Agustin",
   "icons": [
     {
       "src": "favicon.ico",
